# t1-rag-reg

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
examples/: query_refusal.json  query_success.json
reports/: eval_compare_20260206_043952.json  eval_compare_20260206_044021.json  eval_compare_20260206_044026.json  eval_compare_20260206_044036.json  eval_leaderboard_latest.csv  eval_per_query_bm25_20260208_022824.csv  eval_per_query_bm25_20260208_144139.csv  eval_per_query_bm25_20260208_150305.csv  eval_per_query_hybrid_rrf_20260208_022840.csv  eval_per_query_hybrid_rrf_20260208_144154.csv  eval_per_query_hybrid_rrf_20260208_150320.csv  eval_per_query_vector_20260208_000445.csv  eval_per_query_vector_20260208_022811.csv  eval_per_query_vector_20260208_144129.csv  eval_report_bm25_20260208_022824.json  eval_report_bm25_20260208_144139.json  eval_report_bm25_20260208_150305.json  eval_report_hybrid_rrf_20260208_022840.json  eval_report_hybrid_rrf_20260208_144154.json  eval_report_hybrid_rrf_20260208_150320.json  eval_report_vector_20260208_000445.json  eval_report_vector_20260208_001620.json  eval_report_vector_20260208_022811.json  eval_report_vector_20260208_144129.json  eval_run_20260202_011200.json  eval_run_20260205_005038.json  eval_run_20260205_005038_pretty.json  eval_run_20260205_005038_summary.csv  eval_run_20260205_043730.json  eval_run_20260205_043730_pretty.json  eval_run_20260205_043730_summary.csv  eval_run_20260205_061609.json  (+9 more)
(+26 files in other folders)
