[project]
name = "t1-rag-reg"
version = "0.1.0"
description = "Evaluation-first regulatory RAG over public Australian guidance (APRA + AUSTRAC)"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Fahad Amjad"}]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
